improvement(Windows): Combine Windows-My, Windows-ROOT and the default trust manager #1227